<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alertDialogContentBackgroundConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_gray_diagonal_radius_24dp"
        android:minHeight="200dp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_50_percent_guideline"
        app:layout_constraintEnd_toEndOf="@id/vertical_92_percent_guideline"
        app:layout_constraintStart_toStartOf="@id/vertical_8_percent_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_50_percent_guideline">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/logoImageView"
            android:layout_width="230dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="w 1,1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/money_bag" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/moneyBackgroundImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.25"
            android:src="@drawable/ic_collect_money_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleTextView" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/first_cash_out"
            android:textColor="@android:color/white"
            android:textSize="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            app:textFont="bold" />

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/you_are_a_few_steps_away_from_your_first_cash_out"
            android:textColor="@android:color/white"
            android:textSize="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:textFont="semibold" />

        <ImageButton
            android:id="@+id/coinbaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_fast_cashout_empty"
            android:padding="12dp"
            android:src="@drawable/ic_coinbase"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descTextView" />

        <TextView
            android:id="@+id/orTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="or"
            android:textColor="@android:color/white"
            android:textSize="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coinbaseButton"
            app:textFont="semibold" />

        <ImageButton
            android:id="@+id/payeerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_fast_cashout_empty"
            android:padding="12dp"
            android:src="@drawable/ic_payeer_logo"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orTextView" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_white_radius_12dp"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:hint="@string/enter_your_email"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="#A5A6AE"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payeerButton"
            app:textFont="medium" />

        <Button
            android:id="@+id/okayButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_gradient_money_green_with_radius_24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:singleLine="true"
            android:text="@string/word_continue"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:textFont="semibold" />

        <ImageView
            android:id="@+id/moneyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:src="@drawable/ic_collect_money"
            app:layout_constraintEnd_toStartOf="@id/okayButton"
            app:layout_constraintStart_toStartOf="@id/okayButton"
            app:layout_constraintTop_toTopOf="@id/okayButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_8_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_92_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_50_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>