<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alertDialogContentBackgroundConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark_gray_diagonal_radius_24dp"
        android:minHeight="200dp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_50_percent_guideline"
        app:layout_constraintEnd_toEndOf="@id/vertical_92_percent_guideline"
        app:layout_constraintStart_toStartOf="@id/vertical_8_percent_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_50_percent_guideline">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/logoImageView"
            android:layout_width="230dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="w 1,1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/money_bag" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/moneyBackgroundImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.15"
            android:src="@drawable/ic_collect_money_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleTextView" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="25dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/big_reward"
            android:textColor="@android:color/white"
            android:textSize="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            app:textFont="bold" />

        <TextView
            android:id="@+id/coinsRewardTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:textFont="bold"
            tools:text="10 000 coins" />

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="25dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/a_big_special_reward_is_here_for_you"
            android:textColor="@android:color/white"
            android:textSize="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coinsRewardTextView"
            app:textFont="semibold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okayButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_gradient_money_green_with_radius_24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:singleLine="true"
            android:text="@string/play_ad"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descTextView"
            app:textFont="semibold" />

        <ImageView
            android:id="@+id/moneyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:src="@drawable/ic_collect_money"
            app:layout_constraintEnd_toStartOf="@id/okayButton"
            app:layout_constraintStart_toStartOf="@id/okayButton"
            app:layout_constraintTop_toTopOf="@id/okayButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_8_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_92_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_50_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>